--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.helloworldapp">
 
     <application
         android:allowBackup="true"
@@ -8,11 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StartActivityesult"
-        tools:targetApi="31">
-        <activity
-            android:name=".ResultActivity"
-            android:exported="false" />
+        android:theme="@style/Theme.HelloWorldApp">
         <activity
             android:name=".SecondActivity"
             android:exported="false" />
@@ -26,5 +22,4 @@
         </activity>
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
